<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="425dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/askUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding"
            android:layout_marginVertical="@dimen/spaceBetween"
            android:text="@string/enterAmount"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/billAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spaceBetween"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal">
            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/selectTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding"
            android:text="@string/tipSelect"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding"
        android:orientation="horizontal"
        android:textSize="@dimen/text_size">

        <RadioButton
            android:id="@+id/tenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/inLineSpace"
            android:text="@string/radioButton1" />

        <RadioButton
            android:id="@+id/fifteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/inLineSpace"
            android:text="@string/radioButton2" />

        <RadioButton
            android:id="@+id/eighteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/inLineSpace"
            android:text="@string/radioButton3" />

        <RadioButton
            android:id="@+id/twentyPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/inLineSpace"
            android:text="@string/radioButton4" />
    </RadioGroup>

    <TableLayout>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView

                android:id="@+id/tipAmount"
                android:text="@string/tip"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="end"
                android:layout_marginHorizontal="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/computedTip"
                tools:text="$5.00"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/padding"
                android:gravity="end"
                android:textSize="@dimen/text_size"/>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:id="@+id/total"
                android:layout_marginHorizontal="@dimen/padding"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/totalAmount"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/computedTotal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:textSize="@dimen/text_size"
                tools:text="$100.00" />
        </TableRow>
    </TableLayout>


</TableLayout>